<resources>
    <string name="app_name">mhealth</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
